	Post here any database changes ok guys? [shadowlady]

	==== progress ====
	
	Ayothaya mobs == 90% All have correct stats now ?
	Einbroch mobs == 5% Added but using poring stats
	Ayothaya items == 70% Added but no effect ( all are "etc" itens)
	Einbroch items == 5%
	Skill databases == celest working on them i believe.

04/20
	* Adding supported map cell types to const.txt [celest]
	* Added summoned Geographers can heal their masters [celest]
04/19
	* Corrected skill tree entry for Peco lord knight's Berserk [celest]
04/17
	* Fixed "Every job except Novice" armors wearable by Novices [DracoRPG]
04/16
	* Corrected job bonuses for novice, super novice and dancer [celest]
04/15
	* Removed Raid not allowed in GvG (never seen it anywhere...) [DracoRPG]
	* Added new items, thanx to Landarma [Lupus]
04/12
	* Added monsters skills and slaves to all Einbrook monsters, thx4info2 Landarma [Lupus]
	* fixed Deviling and Lou-Yang monsters drops, thx2 MasterOfMuppets [Lupus]
	* Added missing summon slaves to Deviling, Tao Gunka (correct # and type) [Lupus]
	* Made Deviling, Tao Gunka aggressive (st - according to most DBs, 2nd - it's MVP)
	* Corrected 1 wrong entry in the create arrow DB, thanks to Komurka
04/08
	* Corrected wrong entries in the create arrow DB, thanks to Komurka
04/07
	* Fixed materials for forging Lance : 1 Evil Horn -> 2 [DracoRPG]
	* Fixed Sphinx Hat equip location [DracoRPG]
04/06
	* Added Einbrook monsters and drops, thanx to Landarma [Lupus]
04/05
	* Some items fixes [DracoRPG]
	  - added missing "Neko Mimi" hat #5099, thanks to Neko2
	  - fixed Wedding Rings item types, thank to nimrod
	* Removed Evil Wings drops from Mini Demon,Deviruchi,Archangeling and put it into Deviling [Lupus]
	  according to kRO "Evil Wings" are dropped by Deviling only
	  Deviling items drop chances aren't correct yet
	* Fixed skill tree entries for Vulcan Arrow, and Throw Arrow for gypsies,
	  thanks to Hekate
04/04